--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,23 @@
 	text-align: center;
 }
 
+.mleft45px {
+	margin-left: 45px;
+}
+
 hr {
 	color: black; /*works in Chrome and Safari */
 	border-color: black; /*works in Firefox and Opera*/
 	background-color: black; /*color works in IE7+*/
+}
+
+a:hover { 
+  color: red;
+}
+
+body {
+	border-style: solid;
+	border-width: 1px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
